Added picture upload

--- a/app_front/src/app/cocktail-add-form/cocktail-add-form.component.html
+++ b/app_front/src/app/cocktail-add-form/cocktail-add-form.component.html
@@ -142,6 +142,18 @@
         </div>
       </div>
 
+      <div class="mb-3">
+        <h4 for="picture" class="form-label">Image</h4>
+        <input
+          type="file"
+          id="picture"
+          formControlName="picture"
+          class="form-control"
+          placeholder="Image d'illustration"
+          (change)="prepareUpload($event)"
+        />
+      </div>
+
       <button
         type="submit"
         [disabled]="!cocktailForm.valid"
