Added cocktails list

--- a/app_front/src/app/app.component.html
+++ b/app_front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <app-cocktail-details></app-cocktail-details>
+    <app-cocktails-list></app-cocktails-list>
   </div>
   <div class="row">
     <app-cocktail-add-form></app-cocktail-add-form>
